<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/edit_24"
        android:title="@string/edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/delete_24"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/select_all_24"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete_all"
        android:icon="@drawable/delete_24"
        android:title="@string/delete_all"
        app:showAsAction="never" />

</menu>