<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Test" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:constraint_referenced_ids="title_container, description_container,
                start_datetime_container, end_datetime_container,
                repeat_day_container, media_slider_container, notification_slider_container, ringer_slider_container, call_slider_container, alarm_slider_container"
                app:flow_maxElementsWrap="1"
                app:flow_verticalGap="8dp"
                app:flow_verticalStyle="packed"
                app:flow_wrapMode="aligned"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/description"
                    android:minLines="4" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/media_slider_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/media_volume"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/media_volume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:value="0.5" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/notification_slider_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_volume"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/notification_volume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:value="0.5" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ringer_slider_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ringer_volume"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/ringer_volume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:value="0.5" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/call_slider_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_volume"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/call_volume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:value="0.5" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/alarm_slider_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm_volume"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/alarm_volume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:value="0.5" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/repeat_day_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:gravity="center_vertical"
                        android:text="@string/every_day"
                        android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/every_day"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:gravity="center_vertical" />

                </RelativeLayout>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">


                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/select_day_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:singleLine="true" />


                </HorizontalScrollView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/start_datetime_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

                <TextView
                    android:id="@+id/start_datetime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
                    tools:text="@tools:sample/date/ddmmyy" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/end_datetime_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

                <TextView
                    android:id="@+id/end_datetime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
                    tools:text="@tools:sample/date/ddmmyy" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_sound_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/create_update_sound_profile"
        android:src="@drawable/baseline_save_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>